JVM tool:jps jstat jinfo